--- a/index.html
+++ b/index.html
@@ -15,9 +15,11 @@
     <!-- Title -->
     <h1>Unsplash API - Infinite Scroll</h1>
     <!-- Loader -->
-    <div class="loader" id="loader" hidden>
-      <img src="loader.svg" alt="loading" />
+    <div class="loader" id="loader">
+      <img src="loader.svg" alt="Loading" />
     </div>
+    <!-- Image Container -->
+    <div class="image-container" id="image-container"></div>
     <!-- Script -->
     <script src="script.js"></script>
   </body>
